Neon.2 JDT Patch for Groovy-Eclipse: JDT commit: 0cdebe3
branch: R_4_6_maintenance